<resources>
    <string name="app_name">Evently</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone">Phone Number (Optional)</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome to Evently!"</string>
    <string name="register_title">Register a new Account</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register_form">Create Account</string>
    <string name="nav_bar_home">home page</string>
    <string name="nav_bar_account">Profile page</string>
    <string name="nav_bar_search">Search events</string>
    <string name="nav_bar_notifs">Notifications page</string>
    <string name="nav_bar_images">Images page</string>
    <string name="nav_bar_profiles">Profiles page</string>
    <string name="notif_title_sample">Event won</string>
    <string name="notif_description_sample">You have been invited to the event.</string>
    <string name="notif_date_sample">2025-08-12</string>
    <string name="default_notif_channel">fcm_channel_default</string>
    <string name="default_user_profile_header">Evently User\'s Profile</string>
    <string name="profile_page_picture_description">Profile picture</string>
    <string name="profile_page_credentials">Credentials:</string>
    <string name="profile_page_name_header">Name:</string>
    <string name="profile_page_email_header">Email:</string>
    <string name="profile_page_phone_header">Phone Number:</string>
    <string name="profile_page_edit_button_text">Edit</string>
    <string name="profile_page_notifications_header">Notifications:</string>
    <string name="profile_page_notifications_enabled">Push notifications enabled</string>
    <string name="profile_page_notifications_disabled">Push notifications disabled</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="create_event_btn_description">Create event</string>
    <string name="selected_role_icon_description">Currently selected role</string>
    <string name="qr_share_description">Share QR code</string>
    <string name="qr_image_description">QR code for Event</string>
    <string name="share_btn_text">Share</string>
    <string name="event_join_btn">Join Waitlist</string>
    <string name="event_share_btn">Share</string>
    <string name="event_notify_selected_btn">Notify Selected</string>
    <string name="event_send_notification_button">Notify</string>
    <string name="event_export_entrants_button">Export</string>
    <string name="event_join_btn_full">Waitlist Full</string>
    <string name="event_join_btn_joined">Leave Waitlist</string>
    <string name="event_image_description">Event image</string>
    <string name="profile_image_description">Profile image</string>
    <string name="event_location_icon">Location icon</string>
    <string name="event_date_icon">Date/time icon</string>
    <string name="event_selection_header">Selection Date:</string>
    <string name="event_seats_header">Seats:</string>
    <string name="event_entrants_header">Entrants</string>
    <string name="event_remove_event">Remove Event</string>
    <string name="event_view_organizer">View Organizer</string>
    <string name="entrant_limit_header">In Waitlist:</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_image">Delete Image</string>
    <string name="entrant_limit_separator">/</string>
    <string name="event_title">Event title</string>
    <string name="channel">channel</string>
    <string name="send_notification">Send Notification</string>
    <string name="previous_notifications">Previous Notifications</string>
    <string name="description">Description</string>
    <string name="notification_title">Notification Title</string>
    <string name="action_dumb_login">Sign in with Device ID</string>
    <string name="dumb_register_txt">Sign up with Device ID</string>
    <string name="lottery_guidelines_button">Policy</string>
    <string name="lottery_guidelines_dialog_title">How this lottery works</string>
    <string name="lottery_guidelines_dialog_positive">Got it</string>
    <string name="lottery_guidelines_dialog_message">The lottery selection process uses a fair distribution random selection algorithm, namely Fisher–Yates shuffle. It is run when the selection deadline is reached. Firstly, it uses this algorithm to shuffle the input set, which is the set of all entrants. Next, it picks the first N elements from the resulting list, where N is the number of seats in the event, as set by the organizer.  By default, all events have an unlimited number of entrants - that is, people can keep joining the entrant list. The organizer may decide to limit the maximum number of entrants allowed in the waiting list. If this is the case, you\'ll see the limit in the event details page. Regardless of this option, the input set for shuffle is always the whole waiting list at the time of selection for your event.</string>
    <string name="Event_deleted_toast">"Event was removed."</string>
    <string name="Profile_deleted_toast">Profile was deleted.</string>
    <string name="Image_deleted_toast">Image was deleted.</string>
    <string name="waitlist_separator">/</string>
    <string name="account_icon">Account Icon</string>
    <string name="organizer">Organizer:</string>
    <string name="remove_selected_entrant_button">Remove Selected Entrant Button</string>
    <string name="filters_button_label">Filters</string>
    <string name="date_filters_header">Filter by Date range</string>
    <string name="date_filters_picker_helper">Pick a date range to filter events by. Only one side of the range is required!</string>
    <string name="date_filters_start_title">Choose a start date and time</string>
    <string name="date_filters_end_title">Choose an end date and time</string>
    <string name="date_filters_start_hint">Start</string>
    <string name="date_filters_end_hint">End</string>
    <string name="date_filters_invalid_order">Start date must be on or before the end date.</string>
    <string name="filters_cancel">Cancel</string>
    <string name="filters_confirm">Confirm</string>
    <string name="filters_header">Choose Your Categories:</string>
    <string name="filters_category_prompt">Choose Categories:</string>
    <string name="create_event_category_label">Category:</string>
    <string name="create_event_choose_category">Choose Category</string>
    <string name="create_event_selected_category">Selected: %1$s</string>
    <string name="create_event_selected_category_placeholder">Selected: Sports</string>
    <string name="filters_clear">Clear</string>
    <string name="entrant_map_btn">View Map</string>
    <string name="event_dialog_msg">Event: %1$s\n%2$s.</string>
    <string name="expired_btn_text">EXPIRED</string>

</resources>
