<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialSplitButton
        android:id="@+id/notify_split_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
        style="?attr/materialSplitButtonLeadingFilledStyle"
            android:id="@+id/send_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_send_notification_button" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialSplitButtonIconFilledStyle"
            android:id="@+id/select_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/m3_split_button_chevron_avd" />
    </com.google.android.material.button.MaterialSplitButton>

    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonTonalStyle"
        android:id="@+id/open_map"
        android:text="@string/entrant_map_btn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/export_entrants"
        style="?attr/materialButtonOutlinedStyle"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:text="@string/event_export_entrants_button" />
</LinearLayout>
